flutter version change in autodeploy

--- a/.github/workflows/flutter-firebase-deploy.yml
+++ b/.github/workflows/flutter-firebase-deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "2.x.x" # Specify your Flutter version
+          flutter-version: "3.16.9"
 
       - name: Install dependencies
         run: flutter pub get
